- Version 1.2.0.0 - Modificado metodo 'ObternerSubject' para exportar siempre el nombreCertificado

--- a/gestionCertificados/gestionCertificados.csproj
+++ b/gestionCertificados/gestionCertificados.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>gestionCertificados</RootNamespace>
-    <AssemblyName>dse_certificados</AssemblyName>
+    <AssemblyName>dse_gestorcertificados</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -24,12 +24,12 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
+    <Optimize>false</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\dse_certificados.xml</DocumentationFile>
+    <WarningLevel>0</WarningLevel>
+    <DocumentationFile>bin\Release\dse_gestorcertificados.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
