--- a/gestionCertificados/gestionCertificados.csproj
+++ b/gestionCertificados/gestionCertificados.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>gestionCertificados</RootNamespace>
-    <AssemblyName>dse_gestorcertificados</AssemblyName>
+    <AssemblyName>dse_utilescert</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -29,7 +29,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>0</WarningLevel>
-    <DocumentationFile>bin\Release\dse_gestorcertificados.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\dse_utilescert.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
